Tests/Modules/Error/RetryOnly/.build/timedretrycatcher.pr
{
  "name": "TimedRetryCatcher",
  "description": null,
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %timedRetryCaught% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%timedRetryCaught%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "guidance": null,
      "level": null,
      "confidence": null,
      "formal": null,
      "source": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Modules/Error/RetryOnly/TimedRetryCatcher.goal",
  "prPath": "/Modules/Error/RetryOnly/.build/timedretrycatcher.pr",
  "hash": "0c5b0bce71ea2d237dd7b436a42bc5268c0db5828e914f20dc18abea890d7450",
  "builderVersion": "0.2.2",
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}